--- a/MyFirstProject/ViewViewModels/ListView/ListViewView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListViewView.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.ViewViewModels.Layout.LayoutView"
+             x:Class="MyFirstProject.ViewViewModels.ListView.ListViewView"
              Title="{Binding Title}">
-   
+    
         <StackLayout>
-            <Label Text="Layout Menu"
-                VerticalOpt ions="CenterAndExpand" 
+            <Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     
