--- a/MyFirstProject/ViewViewModels/Layout/Absolute/AbsoluteView.xaml
+++ b/MyFirstProject/ViewViewModels/Layout/Absolute/AbsoluteView.xaml
@@ -3,11 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstProject.ViewViewModels.Layout.Absolute.AbsoluteView"
              Title="{Binding Title}">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Absolute Menu"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+
+    <AbsoluteLayout>
+        <Label Text="Centered text"
+                AbsoluteLayout.LayoutBounds=".5,.5,110,25"
+               AbsoluteLayout.LayoutFlags="PositionProportional"/>
+
+        <BoxView Color="Blue"
+                     AbsoluteLayout.LayoutBounds="0.5,0,100,25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional"/>
+        <BoxView Color="Green"
+                     AbsoluteLayout.LayoutBounds="0,0.5,25,100"
+                     AbsoluteLayout.LayoutFlags="PositionProportional"/>
+        <BoxView Color="Red"
+                     AbsoluteLayout.LayoutBounds="1,0.5,25,100"
+                     AbsoluteLayout.LayoutFlags="PositionProportional"/>
+        <BoxView Color="Black"
+                     AbsoluteLayout.LayoutBounds="0.5,1,100,25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional"/>
+
+        <Button Grid.Row="4" Grid.Column="0" Text="Absolute Page"
+                        Command="{Binding OnAbsolutePageClicked}"/>
+
+    </AbsoluteLayout>
 </ContentPage>
