--- a/MyFirstProject/ViewViewModels/Image/ImageMenu/ImageMenuView.xaml
+++ b/MyFirstProject/ViewViewModels/Image/ImageMenu/ImageMenuView.xaml
@@ -8,6 +8,8 @@
 
             <Button Grid.Row="0" Grid.Column="0" Text="Image URI"
                         Command="{Binding OnImageURIClicked}"/>
+            <Button Grid.Row="1" Grid.Column="0" Text="Embedded Image"
+                        Command="{Binding OnEmbeddedImageClicked}"/>
 
         </StackLayout>
     </ContentPage.Content>
