--- a/MyFirstProject/ViewViewModels/Image/ImageMenu/ImageURI/ImageURIView.xaml
+++ b/MyFirstProject/ViewViewModels/Image/ImageMenu/ImageURI/ImageURIView.xaml
@@ -3,13 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstProject.ViewViewModels.Image.ImageURI.ImageURIView"
              Title="{Binding Title}">
-    <ContentPage.Content>
-        <StackLayout>
 
-            <Image Source="{Binding ImageSrc}"
-                   Aspect="AspectFit"/>
+    <StackLayout>
+        <Image Source="{Binding ImageSrc}"/>
+    </StackLayout>
 
-       
-        </StackLayout>
-    </ContentPage.Content>
 </ContentPage>
