11/8 need to finish person list with the images

--- a/MyFirstProject/ViewViewModels/ListView/ListMenu/DisplayImages/DisplayImagesView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListMenu/DisplayImages/DisplayImagesView.xaml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:model="clr-namespace:MyFirstProject.Models"
-             x:Class="MyFirstProject.ViewViewModels.ListView.ListMenu.DisplayPeople.DisplayPeopleView"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="MyFirstProject.ViewViewModels.ListView.ListMenu.DisplayImages.DisplayImagesView"
              Title="{Binding Title}">
-
-
+    
     <CollectionView x:Name="ItemsListView"
                     ItemsSource="{Binding PersonsCollection}"
                     SelectionMode="None"
