--- a/MyFirstProject/ViewViewModels/ListView/ListMenu/ListMenuView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListMenu/ListMenuView.xaml
@@ -7,6 +7,8 @@
         <StackLayout>
             <Button Grid.Row="0" Grid.Column="0" Text="Display People"
                         Command="{Binding OnDisplayPeopleClicked}"/>
+            <Button Grid.Row="1" Grid.Column="0" Text="Display Images"
+                        Command="{Binding OnDisplayImagesClicked}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
