--- a/MyFirstProject/ViewViewModels/ListView/ListMenu/DisplayImages/DisplayImagesView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListMenu/DisplayImages/DisplayImagesView.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:model="clr-namespace:MyFirstProject.Models"
              x:Class="MyFirstProject.ViewViewModels.ListView.ListMenu.DisplayImages.DisplayImagesView"
              Title="{Binding Title}">
-    
+
     <CollectionView x:Name="ItemsListView"
                     ItemsSource="{Binding PersonsCollection}"
                     SelectionMode="None"
@@ -15,23 +15,44 @@
                 <Grid Padding="10" Margin="12">
 
                     <Grid.RowDefinitions>
-                        <RowDefinition Height=".5"/>
+                        <RowDefinition Height="100"/>
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <StackLayout Padding="10" x:DataType="model:Person">
-                        <Label Text="{Binding Name}"
-                               Grid.Column="0"
-                               Grid.Row="0"
-                               LineBreakMode="NoWrap"
-                               FontSize="16"
-                               FontAttributes="Bold"/>
+                    <StackLayout  Padding="10" x:DataType="model:Person" x:Name="PersonNames">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="100"/>
+                            </Grid.RowDefinitions>
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Image Source="{Binding URI}"
+                                       Grid.Column="0"
+                                       Aspect="Fill"/>
+
+                            <Label Text="{Binding Name}"
+                                   Grid.Column="1"
+                                   Grid.Row="0"
+                                   LineBreakMode="NoWrap"
+                                   FontSize="16"
+                                   FontAttributes="Bold"
+                                   TextColor="Black"/>
+
+                        </Grid>
                     </StackLayout>
+
                 </Grid>
+
             </DataTemplate>
         </CollectionView.ItemTemplate>
+
     </CollectionView>
 </ContentPage>
