--- a/MyFirstProject/ViewViewModels/ListView/ListMenu/ListMenuView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListMenu/ListMenuView.xaml
@@ -7,8 +7,12 @@
         <StackLayout>
             <Button Grid.Row="0" Grid.Column="0" Text="Display People"
                         Command="{Binding OnDisplayPeopleClicked}"/>
+            
             <Button Grid.Row="1" Grid.Column="0" Text="Display Images"
                         Command="{Binding OnDisplayImagesClicked}"/>
+            
+            <Button Grid.Row="2" Grid.Column="0" Text="Movie Buttons"
+                        Command="{Binding OnMovieButtonsClicked}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
