--- a/MyFirstProject/ViewViewModels/ListView/ListMenu/MovieButtons/MovieButtonsView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListMenu/MovieButtons/MovieButtonsView.xaml
@@ -4,15 +4,49 @@
              x:Class="MyFirstProject.ViewViewModels.ListView.ListMenu.MovieButtons.MovieButtonsView">
     <ContentPage.Content>
         <StackLayout>
-
             <Label Text="Movies"
                    FontSize="40"
                    HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Start"
                    TextColor="DarkCyan"
                    FontAttributes="Bold"/>
-            
-            
 
+            <CollectionView x:Name="ItemsListView"
+                            ItemsSource="{Binding movies, Mode=TwoWay}"
+                            SelectionMode="None"
+                            ItemsLayout="VerticalList"/>
+
+            <Grid Padding="2">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <StackLayout Orientation="Horizontal"/>
+
+                <StackLayout>
+                    <Label Text="{Binding Title, Mode=TwoWay}"
+                           FontAttributes="Bold"
+                           HorizontalTextAlignment="Start"
+                           TextColor="Black"
+                           FontSize="Medium"/>
+
+                    <Button Text="Update"
+                            Command="{Binding Path=BindingContext.UpdateCommand,
+                                      Source={x:Reference ItemsListView}, Mode=TwoWay}"
+                            CommandParameter="{Binding .}"
+                            HorizontalOptions="EndAndExpand"
+                            TextTransform="None"/>
+
+                    <Button Text="Delete"
+                            Command="{Binding Path=BindingContext.DeleteCommand,
+                                      Source={x:Reference ItemsListView}, Mode=TwoWay}"
+                            CommandParameter="{Binding .}"
+                            HorizontalOptions="End"
+                            TextTransform="None"/>
+
+                </StackLayout>
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
