--- a/MyFirstProject/ViewViewModels/ListView/ListMenu/MovieButtons/MovieButtonsView.xaml
+++ b/MyFirstProject/ViewViewModels/ListView/ListMenu/MovieButtons/MovieButtonsView.xaml
@@ -1,52 +1,85 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.ViewViewModels.ListView.ListMenu.MovieButtons.MovieButtonsView">
-    <ContentPage.Content>
-        <StackLayout>
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:model="clr-namespace:MyFirstProject.Models" xmlns:local="clr-namespace:MyFirstProject.ViewViewModels.ListView.ListMenu.MovieButtons"
+             x:Class="MyFirstProject.ViewViewModels.ListView.ListMenu.MovieButtons.MovieButtonsView"
+             Title="{Binding Title}">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" x:Name="Addbtn" Command="{Binding AddCommand}"/>
+    </ContentPage.ToolbarItems>
+
+    <StackLayout>
+
+        <StackLayout HorizontalOptions="CenterAndExpand">
             <Label Text="Movies"
                    FontSize="40"
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Start"
                    TextColor="DarkCyan"
                    FontAttributes="Bold"/>
+        </StackLayout>
+
+        <Frame HeightRequest="2" Padding="0" HorizontalOptions="FillAndExpand" BackgroundColor="#000000"/>
+
+        <RefreshView x:DataType="local:MovieButtonsViewModel"
+                     IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
 
             <CollectionView x:Name="ItemsListView"
-                            ItemsSource="{Binding movies, Mode=TwoWay}"
+                            ItemsSource="{Binding MovieCollection, Mode=TwoWay}"
                             SelectionMode="None"
-                            ItemsLayout="VerticalList"/>
+                            ItemsLayout="VerticalList">
 
-            <Grid Padding="2">
+                <CollectionView.ItemTemplate>
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
+                    <DataTemplate x:DataType="model:Movies">
+                        <StackLayout>
 
-                <StackLayout Orientation="Horizontal"/>
+                            <Grid Padding="2">
 
-                <StackLayout>
-                    <Label Text="{Binding Title, Mode=TwoWay}"
-                           FontAttributes="Bold"
-                           HorizontalTextAlignment="Start"
-                           TextColor="Black"
-                           FontSize="Medium"/>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
 
-                    <Button Text="Update"
-                            Command="{Binding Path=BindingContext.UpdateCommand,
-                                      Source={x:Reference ItemsListView}, Mode=TwoWay}"
-                            CommandParameter="{Binding .}"
-                            HorizontalOptions="EndAndExpand"
-                            TextTransform="None"/>
+                                <StackLayout Orientation="Horizontal">
 
-                    <Button Text="Delete"
-                            Command="{Binding Path=BindingContext.DeleteCommand,
-                                      Source={x:Reference ItemsListView}, Mode=TwoWay}"
-                            CommandParameter="{Binding .}"
-                            HorizontalOptions="End"
-                            TextTransform="None"/>
+                                    <StackLayout>
+                                        <Label Text="{Binding Name, Mode=TwoWay}"
+                                               FontAttributes="Bold"
+                                               HorizontalTextAlignment="Start"
+                                               TextColor="Black"
+                                               FontSize="Medium"/>
+                                    </StackLayout>
 
-                </StackLayout>
-            </Grid>
-        </StackLayout>
-    </ContentPage.Content>
+                                    <Button Text="Update"
+                                            Command="{Binding Path=BindingContext.UpdateCommand,
+                                                   Source={x:Reference ItemsListView}, Mode=TwoWay}"
+                                            CommandParameter="{Binding .}"
+                                            HorizontalOptions="EndAndExpand"
+                                            TextTransform="None"/>
+
+                                    <Button Text="Delete"
+                                            Command="{Binding Path=BindingContext.DeleteCommand,
+                                                    Source={x:Reference ItemsListView}, Mode=TwoWay}"
+                                            CommandParameter="{Binding .}"
+                                            HorizontalOptions="End"
+                                            TextTransform="None"/>
+
+                                </StackLayout>
+                            </Grid>
+
+                            <Frame HeightRequest="2" Padding="0" HorizontalOptions="FillAndExpand" BackgroundColor="#000000"/>
+
+                        </StackLayout>
+
+                    </DataTemplate>
+
+                </CollectionView.ItemTemplate>
+
+            </CollectionView>
+
+        </RefreshView>
+
+    </StackLayout>
+
 </ContentPage>
