--- a/MyFirstProject/ViewViewModels/Controls/ControlsView.xaml
+++ b/MyFirstProject/ViewViewModels/Controls/ControlsView.xaml
@@ -3,11 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstProject.ViewViewModels.Controls.ControlsView"
              Title="{Binding Title}">
-    
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    
+
+    <StackLayout>
+        <Button Grid.Row="0" Grid.Column="0" Text="Slider"
+                        Command="{Binding OnSliderClicked}"/>
+    </StackLayout>
 </ContentPage>
