--- a/MyFirstProject/ViewViewModels/Controls/Slider/SliderView.xaml
+++ b/MyFirstProject/ViewViewModels/Controls/Slider/SliderView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.ViewViewModels.Controls.Slider.SliderView">
+             x:Class="MyFirstProject.ViewViewModels.Controls.Slider.SliderView"
+             Title="{Binding Title}">
     <StackLayout>
         <StackLayout BindingContext="{x:Reference slider}"
                      HorizontalOptions="FillAndExpand">
