--- a/MyFirstProject/ViewViewModels/Controls/Stepper/StepperView.xaml
+++ b/MyFirstProject/ViewViewModels/Controls/Stepper/StepperView.xaml
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.ViewViewModels.Controls.Stepper.StepperView">
+             x:Class="MyFirstProject.ViewViewModels.Controls.Stepper.StepperView"
+             Title="{Binding Title}">
     <StackLayout Margin="20">
-        
-        <Label x:Name="rotatingLabel"
+
+        <Label x:Name="_rotatingLabel"
                Text="ROTATING TEXT!"
                FontSize="Large"
                FontAttributes="Bold,Italic" 
                HorizontalOptions="Center"
                VerticalOptions="CenterAndExpand"/>
 
-        <Stepper x:Name="stepper"
+        <Stepper x:Name="_stepper"
                  Maximum="360"
                  Increment="10"
                  BackgroundColor="Blue"
