--- a/MyFirstProject/ViewViewModels/Controls/ControlsView.xaml
+++ b/MyFirstProject/ViewViewModels/Controls/ControlsView.xaml
@@ -13,5 +13,7 @@
                 Command="{Binding OnSwitchClicked}"/>
         <Button Text="Double Switch"
                 Command="{Binding OnDoubleSwitchClicked}"/>
+        <Button Text="Entry"
+                Command="{Binding OnEntryClicked}"/>
     </StackLayout>
 </ContentPage>
